--- a/style.css
+++ b/style.css
@@ -1,8 +1,28 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
-body{
-    background-color: #32383E;
+body {
+  background-color: #32383e;
+  color: darkgoldenrod;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.title{
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: 25px;
+    font-weight: 900;
+}
+
+.textOne{
+    text-align: center;
+}
+
+.textOne,.textTwo{
+    font-size: 20px;
 }
