Instagram Clone | input group styling

--- a/Bootstrap 5/bootstrap-instagram-clone/style.css
+++ b/Bootstrap 5/bootstrap-instagram-clone/style.css
@@ -106,3 +106,10 @@ input[type="search"]:focus{
 }
 
 /* navbar end */
+
+/* input group styling */
+
+.inputGroupStyle{
+  margin-left: 180px;
+  width: 250px;
+}
