Instagram Clone | Avatar profile added

--- a/Bootstrap 5/bootstrap-instagram-clone/style.css
+++ b/Bootstrap 5/bootstrap-instagram-clone/style.css
@@ -104,6 +104,10 @@ input[type="search"]:focus{
   color: black;
   opacity: 0.4;
 }
+.searchInput::placeholder::before{
+  content: url(img/icon.png);
+}
+
 
 /* navbar end */
 
